# agentic-coding-workshop-code

./: .gitignore  README.md  pyproject.toml
02-ai-dlc-development/: README.md  troubleshooting.md
02-ai-dlc-development/concepts/: ai-dlc-overview.md  tools-comparison.md
02-ai-dlc-development/practice/openspec-calculator/: README.md  instructions.md
02-ai-dlc-development/practice/spec-kit-todo-app/: README.md  instructions.md
02-ai-dlc-development/tools/: claude-code-integration.md  cursor-integration.md
02-ai-dlc-development/tools/openspec/: README.md  workflow-guide.md
02-ai-dlc-development/tools/spec-kit/: README.md  workflow-guide.md
03-mcp-tools/: README.md
03-mcp-tools/01-basic-server/: README.md  __init__.py  main.py  test_client.py
03-mcp-tools/01-basic-server/tests/: test_basic_server.py
03-mcp-tools/02-tools/: README.md  __init__.py  demo_client.py  main.py
03-mcp-tools/02-tools/tests/: test_calculator.py  test_filesystem.py  test_weather.py
03-mcp-tools/02-tools/tools/: __init__.py  calculator.py  datetime_tools.py  filesystem.py  weather.py
03-mcp-tools/03-transport-methods/: README.md  __init__.py  demo_client.py  http_client.py  http_server.py  stdio_client.py  stdio_server.py
03-mcp-tools/03-transport-methods/tests/: test_http.py  test_stdio.py
03-mcp-tools/04-resources/: README.md  __init__.py  demo_client.py  main.py
03-mcp-tools/04-resources/data/: sample.md
03-mcp-tools/04-resources/resources/: __init__.py  file_resources.py  json_data.py  static_docs.py
03-mcp-tools/04-resources/tests/: test_file_resources.py  test_json_data.py  test_static_docs.py
03-mcp-tools/05-client-integration/: README.md
04-testing-deployment/: README.md
04-testing-deployment/01-ai-dlc-testing/: AI-DLC-Testing-Overview.md  README.md
04-testing-deployment/01-ai-dlc-testing/examples/mcp-testing/: INTEGRATION_TESTING_GUIDE.md  README.md  conftest.py  test_basic_server.py  test_resources.py  test_tools.py
04-testing-deployment/01-ai-dlc-testing/examples/metamorphic/: README.md  metamorphic_relations.py  test_llm_output.py
04-testing-deployment/01-ai-dlc-testing/examples/property-based/: README.md  test_properties.py
04-testing-deployment/01-ai-dlc-testing/examples/tdd/: README.md  calculator.py  test_calculator.py
04-testing-deployment/01-ai-dlc-testing/exercises/: exercise-1-tdd.md  exercise-2-metamorphic.md
04-testing-deployment/01-ai-dlc-testing/exercises/solutions/: README.md  string_processor.py  test_llm_metamorphic.py  test_string_processor.py
04-testing-deployment/02-mcp-chat-client/: README.md  app.py
04-testing-deployment/02-mcp-chat-client/backend/: __init__.py  config.py  database.py  langgraph_agent.py  models.py
04-testing-deployment/02-mcp-chat-client/components/: __init__.py  chat_message.py  sidebar.py
04-testing-deployment/02-mcp-chat-client/pages/: 1_Chat.py  2_History.py  3_Settings.py
04-testing-deployment/02-mcp-chat-client/tests/: __init__.py  conftest.py  test_config.py  test_database.py
04-testing-deployment/03-docker-deployment/: Dockerfile.chat  Dockerfile.mcp  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint-chat.sh  entrypoint-mcp.sh  healthcheck.sh
04-testing-deployment/03-docker-deployment/guides/: docker-basics.md  docker-compose-guide.md  troubleshooting.md
04-testing-deployment/04-ci-cd-pipeline/: README.md
04-testing-deployment/04-ci-cd-pipeline/examples/: custom-workflow-example.yml  workflow-guide.md
05-a2a-agents/: README.md
05-a2a-agents/01-a2a-architecture/: README.md  comparison.md  concepts.md
05-a2a-agents/02-mem0-integration/: README.md  agent_memory.py  quickstart.py
05-a2a-agents/03-restaurant-agent/: ADVANCED.md  QUICKSTART.md  README.md  chat_ui.py  config.py  main.py  run_servers.sh  stop_servers.sh
05-a2a-agents/03-restaurant-agent/agents/: booking_agent.py  recommender_agent.py
05-a2a-agents/03-restaurant-agent/memory/: mem0_client.py
05-a2a-agents/03-restaurant-agent/pages/: memory_viewer.py
05-a2a-agents/03-restaurant-agent/tests/: conftest.py  test_booking.py  test_recommender.py  test_tools.py
05-a2a-agents/03-restaurant-agent/tools/: restaurant_search.py
agentic_coding_workshop/: __init__.py
