[project]
name = "agentic-coding-workshop"
version = "0.1.0"
description = "Agentic AI와 AI-DLC를 활용한 소프트웨어 개발 워크샵"
authors = [
    { name = "Workshop Author", email = "author@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # 기본
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    # MCP 서버
    "fastmcp>=0.2.0",
    # Agent-to-Agent
    "mem0ai>=0.1.30",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "openai>=1.58.0",
    # UI 및 클라이언트
    "streamlit>=1.40.0",
    "langgraph>=0.6.0",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=0.3.0",
    # 테스팅
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    # 코드 품질
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/frentis-ai-study/agentic-coding-workshop-code"
Repository = "https://github.com/frentis-ai-study/agentic-coding-workshop-code.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_coding_workshop"]

# Ruff - 기본 설정만
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

# Pytest - 간소화된 설정
[tool.pytest.ini_options]
testpaths = ["03-mcp-tools", "04-testing-deployment", "05-a2a-agents"]
asyncio_mode = "auto"
